force-app/main/default/objects/outfunds__Disbursement__c/outfunds__Disbursement__c.object-meta.xml
<CustomObject>
    <label>Disbursement</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Disbursement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>