force-app/main/default/objects/outfunds__Disbursement__c/fields/outfunds__Amount__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>