force-app/main/default/objects/outfunds__Disbursement__c/fields/outfunds__Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Disbursement_Date__c</fullName>
    <label>Disbursement Date</label>
    <type>Date</type>
</CustomField>