force-app/main/default/objects/outfunds__Disbursement__c/fields/outfunds__Funding_Request__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Funding_Request__c</fullName>
    <description>Relationship to the Funding Request.</description>
    <label>Funding Request</label>
    <referenceTo>outfunds__Funding_Request__c</referenceTo>
    <relationshipLabel>Disbursements</relationshipLabel>
    <relationshipName>Disbursements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>