force-app/main/default/objects/outfunds__Disbursement__c/fields/outfunds__Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Scheduled_Date__c</fullName>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>